removed schedule header and added padding to the schedule html file

--- a/public/stylesheets/homepageStyle.css
+++ b/public/stylesheets/homepageStyle.css
@@ -269,6 +269,9 @@ a.article:hover {
     #ttrDiv {
       padding-top: 0.5em;
     }
+    #ScheduleDiv {
+      padding-top: 0.5em;
+    }
 }
 
 /* ---------------------------------------------------
