--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -40,7 +40,7 @@
         <a class="nav-link" href="#" ng-click="settingModal.open();getSettings()">Settings</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" ng-click="activeTab='about'" href="#">About</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/users/logout">Sign Out</a>
