--- a/public/stylesheets/logsStyle.css
+++ b/public/stylesheets/logsStyle.css
@@ -7,3 +7,9 @@
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
+
+#removeLogButton {
+	padding: 5px;
+	border: none;
+	background: none;
+}
