--- a/public/stylesheets/logsStyle.css
+++ b/public/stylesheets/logsStyle.css
@@ -2,8 +2,14 @@
 	padding: 25px 50px 25px 50px;
 }
 
-#log_separator {
+.log-separator {
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+.remove-log-btn {
+	padding: 5px;
+	border: none;
+	background: none;
 }
