--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -111,7 +111,7 @@
 
 
       <!-- Page Content  -->
-      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 text-center" id="page-content">
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 text-center" id="page-content" style="max-width:100%">
         <div ng-switch='activeTab'>
           <div ng-switch-when="ttr">
             <ng-include src="'ttr.html'"></ng-include>
