--- a/views/login.ejs
+++ b/views/login.ejs
@@ -60,6 +60,7 @@
         </div>
 
         <input class="btn btn-primary" type="submit" name="submit" value="Login" />
+        <a href="http://cs480-projects.github.io/teams-fall2018/synchronizedBroncos/index.html" style="color:blue;padding-left: 15px;width:42px;height:42px;font-size: 14px;border:0;">Learn More</a>
       </form>
     </div>
   </div>
