--- a/views/login.ejs
+++ b/views/login.ejs
@@ -44,7 +44,7 @@
 
         <% if ( expressFlash.length > 0 ) { %>
         <center>
-          <h2 class="flashMessage">Message:
+          <h2 class="flashMessage">
             <%= expressFlash %>
           </h2>
         </center>
