add ability to clear device tokens in settings

--- a/public/stylesheets/homepageStyle.css
+++ b/public/stylesheets/homepageStyle.css
@@ -64,6 +64,11 @@ a:focus {
     margin: 40px 0;
 }
 
+#clearDeviceTokens {
+    font-size: 12px;
+    cursor: pointer;
+}
+
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
