--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -185,6 +185,8 @@
           <div>
             <label for="pushNotification">Push Notification</label>
             <input type="checkbox" id="pushNotification" ng-model="pushStatus" ng-init='pushStatus=$parent.pushStatus' ng-value='$parent.pushStatus'>
+            <br>
+            <a id="clearDeviceTokens" class="text-warning" ng-click="$parent.clearDeviceTokens();$parent.settingModal.close()">Clear Push Notification Devices</a>
           </div>
         </form>
       </div>
