implement PWA functionality

--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -11,6 +11,7 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="shortcut icon" href="favicon.ico"/>
+  <link rel="manifest" href="/manifest.webmanifest">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
@@ -32,6 +33,7 @@
   <script src="/javascripts/controllers/ttr-control.js"></script>
   <script src="/javascripts/controllers/log-control.js"></script>
   <script src="/javascripts/libraries/loading-bar.js"></script>
+  <script src="/javascripts/features/register-sw.js"></script>
 </head>
 
 <body ng-controller="HomeCtrl">
