--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,8 +12,9 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/stylesheets/homepageStyle.css">
+  <link rel="manifest" href="/manifest.webmanifest">
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
+  <script src="/javascripts/features/register-sw.js"></script>
 </head>
 
 <body>
