--- a/public/stylesheets/homepageStyle.css
+++ b/public/stylesheets/homepageStyle.css
@@ -69,6 +69,11 @@ a:focus {
     cursor: pointer;
 }
 
+#settingsContact {
+    font-size: 12px;
+    color: #6c757d;
+}
+
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
