updated about links to point to new landing page and added PWA icon for iOS

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -62,7 +62,7 @@
         </div>
 
         <input class="btn btn-primary" type="submit" name="submit" value="Login" />
-        <a href="http://cs480-projects.github.io/teams-fall2018/synchronizedBroncos/index.html" style="color:blue;padding-left: 15px;width:42px;height:42px;font-size: 14px;border:0;">Learn More</a>
+        <a href="https://zeitplan.me/" style="color:blue;padding-left: 15px;width:42px;height:42px;font-size: 14px;border:0;">Learn More</a>
       </form>
     </div>
   </div>
