--- a/views/Homepage.ejs
+++ b/views/Homepage.ejs
@@ -45,7 +45,7 @@
         <a class="nav-link" href="#" ng-click="settingModal.open();getSettings()">Settings</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" ng-click="activeTab='about'" href="#">About</a>
+        <a class="nav-link" href="https://zeitplan.me/">About</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/users/logout">Sign Out</a>
@@ -63,7 +63,7 @@
           </button>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
             <a class="nav-link" href="#" ng-click="settingModal.open();getSettings()">Settings</a>
-            <a class="nav-link" ng-click='activeTab="about";' onClick="showTimer(false);">About</a>
+            <a class="nav-link" href="https://zeitplan.me/">About</a>
             <a class="nav-link" href="/users/logout">Sign Out</a>
           </div>
         </div>
@@ -127,9 +127,6 @@
           </div>
           <div ng-switch-when="pomodoro">
             <ng-include src="'pomodoro.html'"></ng-include>
-          </div>
-          <div ng-switch-when="about">
-            <ng-include src="'about.html'"></ng-include>
           </div>
         </div>
         <div id="pomodoroTimer" style="display:none;width:100%;height:75%;">
